# Blood-group-Detection-using-python

./: .gitattributes  .gitignore  GUI.py  README.md  demo.py  pyproject.toml
.github/: CODEOWNERS
src/blood_group_detection_using_python/: GUI.py  __init__.py  demo.py
